# econfmanager

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  install.sh  install_jsonrpc_server.sh  nng
econfmanager/: Cargo.toml  build.rs  cbindgen.toml
econfmanager/cmake/: CMakeLists.txt
econfmanager/proto_conf/: options.proto  service_events.proto  services.proto
econfmanager/python/: generate_python_interface.py
econfmanager/src/: config.rs  database_utils.rs  event_receiver.rs  interface.rs  lib.rs  lib_helper_functions.rs  notifier.rs  requests_manager.rs  schema.rs
examples/peripheral_service/: CMakeLists.txt  build.sh  service.c
examples/peripheral_service/proto/: custom_types.proto  device.proto  parameters.proto
examples/web_client/: index.html  jrpc.js  main.css  main.js  parameter_manager.js  ui_elements.js  ws_connection.js
jsonrpc_server/: Cargo.toml  config.json
jsonrpc_server/app/: Cargo.toml  config.toml  config.yaml  main.rs
jsonrpc_server/lib/: Cargo.toml
jsonrpc_server/lib/src/: configfile.rs  lib.rs  rest_server.rs  shared_state.rs  utils.rs  ws_server.rs
jsonrpc_server/src/: arguments.rs  configfile.rs  main.rs
proto_conf/: configuration.proto  configuration_options.proto  options.proto  parameters.proto  service.proto
src/: arguments.rs  configfile.rs  constants.rs  daemon.rs  database_utils.rs  econfmanager.rs  event_receiver.rs  interface.rs  lib.rs  lib_helper_functions.rs  notifier.rs  schema.rs
