[package]
name = "econfmanager"
description = "Configuration Manager for Embedded Systems"
version = "0.1.0"
edition = "2024"
authors = [ "Stanislav Karpikov <stankarpikov@gmail.com>" ]

[dependencies]
log = "0.4.27"
prost = "0.13.5"
prost-reflect = "0.14.7"
rusqlite = "0.34.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost = "0.13.5"
prost-reflect = "0.14.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [[bin]]
# name = "econfmanager"
# path = "src/interface.rs"

[lib]
name = "econfmanager"
crate-type = ["staticlib"]  