[package]
name = "econfmanager"
description = "Configuration Manager for Embedded Systems"
version = "0.1.0"
edition = "2024"
authors = [ "Stanislav Karpikov <stankarpikov@gmail.com>" ]

[dependencies]
log = "0.4.27"
prost = "0.13.5"
prost-reflect = "0.15.2"
rusqlite = {version = "0.35.0", features = ["backup"]}
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nng = "1.0"
num_enum = "0.7.3"
socket2 = "0.5"
timer = "0.2.0"
chrono = "0.4.41"
env_logger = "0.11.8"
parking_lot = "0.12"

[build-dependencies]
prost = "0.13.5"
prost-reflect = "0.15.2"
prost-build = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [[bin]]
# name = "econfmanager"
# path = "src/daemon.rs"

[lib]
name = "econfmanager"
crate-type = ["staticlib"]  