[package]
name = "econfmanager"
description = "Configuration Manager for Embedded Systems"
version = "0.1.7"
edition = "2021"
authors = [ "Stanislav Karpikov <stankarpikov@gmail.com>" ]
license = "MIT"

[dependencies]
log = "0.4.27"
prost = "0.13.5"
prost-reflect = "0.15.2"
rusqlite = {version = "0.35.0", features = ["backup"]}
serde_json = "1.0"
num_enum = "0.7.3"
socket2 = {version = "0.5", features = ["all"]}
timer = "0.2.0"
chrono = "0.4.41"
env_logger = "0.11.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
anyhow = "1.0.98"
num-derive = "0.4.2"
num-traits = "0.2"
strsim = "0.11.1"
ansi_term = "0.12.1"

[build-dependencies]
prost = "0.13.5"
prost-reflect = "0.15.2"
prost-build = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
regex = "1.0"
rustfmt = "0.10.0"
which = "8.0.0"

[lib]
name = "econfmanager"
crate-type = ["rlib", "staticlib", "dylib"]
