[package]
name = "jsonrpc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1"
futures = "0.3"
econfmanager = {path = "../econfmanager"}