[package]
name = "jsonrpc_lib"
version = "0.1.0"
edition = "2024"
authors = [ "Stanislav Karpikov <stankarpikov@gmail.com>" ]
license = "MIT"

[dependencies]
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.4.2"
futures = "0.3"
chrono = "0.4.41"
env_logger = "0.11.8"
lazy_static = "1.4"
futures-util = "0.3"
econfmanager = {path = "../../econfmanager"}
serde_json = "1.0"
serde_yaml = "0.9.34"
ansi_term = "0.12.1"

[lib]
name = "jsonrpc_lib"
path = "src/lib.rs"
